--- a/index.html
+++ b/index.html
@@ -5,33 +5,78 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>E-Wallet Admin Page</title>
+    <link rel="stylesheet" href="style.css">
     <style>
-    body {
-    margin: 0;
-    font-family: Arial, Helvetica, sans-serif;
-  }
-  .topnav {
-    overflow: hidden;
-    background-color: #333;
-  }
-  .topnav a {
-    float: left;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
-  }
-  
-    </style>
+        * {box-sizing: border-box;}
+        
+        body {
+          margin: 0;
+          font-family: Arial, Helvetica, sans-serif;
+        }
+      </style>
 </head>
 <body>
-    <div class="topnav">
-        <a class="active" href="#HOME">Home</a>
-        <a href="#about Us">News</a>
-        <a href="#Terms and Conditions">Contact</a>
-        <a href="#More">About</a>
+   
+  <!-- Navigation Bar  -->
+
+    <nav class="topnav">
+        <a class="active" href="#home">Home</a>
+        <a href="#about">About Us</a>
+        <a href="#contact">Terms and Conditions</a>
+        <a href="more">More</a>
+        <div class="search-container">
+          <form action="/action_page.php">
+            <input type="text" placeholder="Search.." name="search">
+            <button type="submit"><i class="fa fa-search"></i></button>
+          </form>
+        </div>
+    </nav>
+
+     <!-- Dashboard Part -->
+
+    <div>
+      <div class="dash">
+        <h1 class="dashTitile"><i class="fa-solid fa-bars" id="bar"></i> DASHBOARD</h1><br>
+        <h3 class="Item">Saved Item</h3><br>
+        <h3 class="link">Important Links</h3>
+        <div>
+          <h1 class="botton-content"><i class="fa-solid fa-person-dress-simple"></i>Admin Settings</h1>
+        </div>
       </div>
+
       
+    <div class="e-walletDashboard">
+      <div class="txt">
+        <h2>E-Wallet Dashboard</h2>
+      </div>
+      <img src="images/logo_bup.jpeg" class="logo">
+    </div>
+
+    <!-- Dashboard Box Part -->
+
+      <div class="box">
+        <div class="BOX1">
+          <h4>Approve/Decline</h4>
+          <h4>Requests</h4>
+        </div>
+        <div class="BOX2">
+          <h4>Account</h4>
+          <h4>Mangement</h4>
+        </div>
+        <div class="BOX3">
+          <h4>Sales</h4>
+          <h4>Analysis</h4>
+        </div>
+        <div class="BOX4">
+          <h4>Transaction</h4>
+          <h4>Statement</h4>
+        </div>
+      </div>
+    </div>
+   
+
+
+
+  <script src="https://kit.fontawesome.com/605c1f1072.js" crossorigin="anonymous"></script>
 </body>
 </html>
